chore: Update pdm.lock with dev dependencies for ruff and mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "ruff>=0.5.4",
+    "mypy>=1.11.0",
+]
